Created initial version of layout for 2x1 switch board; reorganized repo to house KiCad projects for both the 2x1 and 3x1 boards

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-switch_board-backups/*
-fp-info-cache
-~*
+switch_board_2x1/switch_board_2x1-backups/*
+switch_board_2x1/fp-info-cache
+switch_board_2x1/~*
+switch_board_3x1/switch_board_3x1-backups/*
+switch_board_3x1/fp-info-cache
+switch_board_3x1/~*
