--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 switch_board_2x1/switch_board_2x1-backups/*
 switch_board_2x1/fp-info-cache
 switch_board_2x1/~*
+switch_board_2x1/#auto_saved_files#
 switch_board_3x1/switch_board_3x1-backups/*
 switch_board_3x1/fp-info-cache
 switch_board_3x1/~*
+switch_board_3x1/#auto_saved_files#
